--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# Archivo: .env
-DB_NAME=nombre_basedatos
-DB_USER=usuario
-DB_PASSWORD=clave
-DB_HOST=localhost
-DB_PORT=5432
+DB_NAME=postgres
+DB_USER=postgres.xnbqwmuhlozlqhwpesuh
+DB_PASSWORD=m5c6appsma2entrega
+DB_HOST=aws-0-us-east-1.pooler.supabase.com
+DB_PORT=6543
